<resources>
    <string name="cloudservice">:cloudservice</string>
    <string name="communityservice">:communityservice</string>
    <string name="configservice">:configservice</string>
    <string name="controlservice">:controlservice</string>
    <string name="devicemanage">:devicemanage</string>
    <string name="ipcservice">:ipcservice</string>
    <string name="ipdcservice">:ipdcservice</string>
    <string name="logservice">:logservice</string>
    <string name="pbxservice">:pbxservice</string>
    <string name="security">:security</string>
    <string name="sipservice">:sipservice</string>
    <string name="subphoneclient">:subphoneclient</string>
    <string name="subphoneserver">:subphoneserver</string>
    <string name="upgrade">:upgrade</string>
    <string name="watchdog">:watchdog</string>
    <string name="callfsm">:callfsm</string>
    <string name="app_name">HomePanel</string>
    <string name="scenario_home">Home</string>
    <string name="scenario_away">Away</string>
    <string name="scenario_sleep">Sleep</string>
    <string name="scenario_wakeup">Wake up</string>
    <string name="device_air">Air Purifer</string>
    <string name="device_relay">Relay</string>
    <string name="device_camera">Camera</string>
    <string name="device_elevator">Lift</string>
    <string name="device_lock">Lock</string>
    <string name="device_empty"> </string>
    <string name="devices_cameras_living_room">Living Room</string>
    <string name="devices_cameras_ipdoor_camera">IP Door Camera</string>
    <string name="devices_cameras_parking">Parking</string>
    <string name="devices_cameras_living_room_time">Image from 10:40 am</string>
    <string name="devices_cameras_ipdoor_camera_time">Image from 10:40 am</string>
    <string name="devices_cameras_parking_time">Image from 10:40 am</string>
    <string name="secnario_arm">Arm</string>
    <string name="secnario_disarm">Disarm</string>
    <string name="secnario_home">Home</string>
    <string name="secnario_sleep">Sleep</string>
    <string name="secnario_wakeup">Wake up</string>
    <string name="secnario_away">Away</string>
    <string name="Speeddial">Speed dial</string>
    <string name="Subphone">Subphone</string>
    <string name="Keypad">Keypad</string>
    <string name="welcomehome">Welcome Home</string>
    <string name="call_title_speeddial">Speed Dial</string>
    <string name="call_title_subphone">Subphone</string>
    <string name="call_title_keypad">Keypad</string>
    <string name="notification_title_event">Event</string>
    <string name="notification_title_alarm">Alarm History</string>
    <string name="notification_title_notify">Notification</string>
    <string name="notification_title_voice">Voice Message</string>
    <string name="lowbatteryhint">Front door lock has low battery, tap to learn how to change your door lock.</string>
    <string name="temp_hot">The inside temperature is too hot, tap to control air condition."</string>
    <string name="newvisitor">You have a new visitor, tap to check.</string>
    <string name="newvoicemsg">You have a new voice message,tap to play.</string>
    <string name="newpropertymsg">You have a new property message,tap to check.</string>
    <string name="newalarmmsg">You have a new alarm message,tap to check.</string>
    <string name="novisitor">You have no visitor.</string>
    <string name="novoicemsg">You have no voice message.</string>
    <string name="nopropertymsg">You have no property message.</string>
    <string name="noalarmmsg">You have no alarm message.</string>
    <string name="goodmoring">Good Morning!</string>
    <string name="goodafternoon">Good Afternoon!</string>
    <string name="goodevening">Good Evening!</string>
    <string name="armhint">Everything looks good, your home is secure while you’re away.</string>
    <string name="disarmhint">Everything looks good, your home is ready to arm.</string>
    <string name="currnt">Current:</string>
    <string name="password_hint_disarm">Please enter your password to disarm.</string>
    <string name="password_hint_arm">Please enter your password to arm.</string>
    <string name="password_sences_edit">Please enter your password first.</string>
    <string name="password_hint_passworderror">Your password is incorrect,please try again.</string>
    <string name="indicator_board_cancel">Cancel</string>
    <string name="indicator_board_tap">Tap to call lift</string>
    <string name="dialing">Dialing...</string>
    <string-array name="fullscreen_arrays">
        <item>720P</item>
        <item>1080P</item>
    </string-array>
    <string name="incommingcall">InComing call...</string>
    <string name="frontdoor">Front Door</string>
    <string name="backdoor">Rear Door</string>
    <string name="neighbor">Neighbor</string>
    <string name="end">Decline</string>
    <string name="answer">Accept</string>
    <string name="lift">Lift</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="open_door">Open</string>
    <string name="cancel">Cancel</string>
    <string name="engin_top_title">Engineering Mode</string>
    <string name="engin_device_role">Device Role</string>
    <string name="engin_network">Network Setting</string>
    <string name="network_details">Network Details</string>
    <string name="about">About</string>
    <string name="engin_network_dhcp">Network DHCP</string>
    <string name="engin_serverip">Server IP Setting</string>
    <string name="engin_roomno">Room Number</string>
    <string name="engin_zonecfg">Zone Configuration</string>
    <string name="engin_relaycfg">Relay Configuration</string>
    <string name="engin_elevatorset">Elevator Setting</string>
    <string name="engin_ddkset">Door Lock Setting</string>
    <string name="card_action">Card Action</string>
    <string name="engin_subphone">IP Subphone Setting</string>
    <string name="engin_masterphone">IP Masterphone Setting</string>
    <string name="engin_camera">IP Camera Setting</string>
    <string name="engin_password_change">Engineering Mode Code</string>
    <string name="engin_ipdc">IPDC</string>
    <string name="engin_cloud_environment">Cloud Environment</string>
    <string name="engin_antidismantle">Anti-Dismantle</string>
    <string name="engin_finaltest">Start Final Tester</string>
    <string name="engin_restart">Restart</string>
    <string name="engin_serverip_addr">192.168.2.2</string>
    <string name="engin_roomno_number">300201002</string>
    <string name="engin_ipdc_front_version">Front IPDC Version</string>
    <string name="engin_ipdc_back_version">Back IPDC Version</string>
    <string name="network_top_title">Network Setting</string>
    <string name="network_IP_addr">IP Address</string>
    <string name="network_netmask">Netmask</string>
    <string name="network_gateway">Gateway</string>
    <string name="network_ipaddr_value">159.99.249.247</string>
    <string name="network_netmask_value">255.255.255.0</string>
    <string name="network_gateway_value">159.99.249.1</string>
    <string name="zone_top_title">Zone Configuration</string>
    <string name="zone_local_zone">Local Zone</string>
    <string name="zone_extension_zone">Extended Zone</string>
    <string name="title_activity_wifi_configure">WifiConfigureActivity</string>
    <string name="wifi_configure">Wi-Fi Configuration</string>
    <string name="wifi_scan_access_points">Scan Access Points</string>
    <string name="wifi_configuration">Wi-Fi Configuration</string>
    <string name="wifi_manually_configuration">Manually Configure AP</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="location">Set Location</string>
    <string name="Honeywell_home">Honeywell Home</string>
    <string name="title_activity_date_time">DateTimeActivity</string>
    <string name="date">Date &amp; Time</string>
    <string name="title_activity_advanced">AdvancedActivity</string>
    <string name="advanced">Advanced Settings</string>
    <string name="card">Access Card Management</string>
    <string name="password">Change Disarm Password</string>
    <string name="digital">Digital Photo Frame</string>
    <string name="title_activity_card_management">CardManagementActivity</string>
    <string name="add_card">There are no any access card yet,\nyou can tap the \'add button\' to create your first.</string>
    <string name="title_activity_add_card">AddCardActivity</string>
    <string name="card_type">Please select card type you want to create</string>
    <string name="card_permanent">Permanent Card</string>
    <string name="card_temporary">Temporary Card</string>
    <string name="title_activity_config_card">ConfigCardActivity</string>
    <string name="config_permanent">Configure Permanent Card</string>
    <string name="config_temporary">Configure Temporary Card</string>
    <string name="title_activity_config_temorary">ConfigTemoraryActivity</string>
    <string name="title_activity_set_date">SetDateActivity</string>
    <string name="title_activity_set_time">SetTimeActivity</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>
    <string name="title_activity_passwd_change">PasswdChangeActivity</string>
    <string name="title_activity_new_passwd">NewPasswdActivity</string>
    <string name="Password">Password</string>
    <string name="SubPassword">Sub Password</string>
    <string name="elevator_top_title">Elevator Setting</string>
    <string name="elevator_ip">IP</string>
    <string name="elevator_port">Port</string>
    <string name="elevator_localfloor">Local Floor</string>
    <string name="elevator_ip_value">192.171.92.1</string>
    <string name="elevator_port_value">4001</string>
    <string name="elevator_localfloor_value">10</string>
    <string name="change_engineering_code_top_title">Change Engineering Code</string>
    <string name="change_engineering_code_first_title">Code</string>
    <string name="change_engineering_code_first_title_end">Enter a new password</string>
    <string name="change_engineering_code_second_title">Comfirm Code</string>
    <string name="change_engineering_code_second_title_end">Comfirm password</string>
    <string name="extension_zone_top_title">Extended Zone</string>
    <string name="extension_zone_5804EU">5804EU</string>
    <string name="extension_zone_5800_PIR_AP">5800-PIR-AP</string>
    <string name="extension_zone_5804EU_status">online</string>
    <string name="extension_zone_5800_PIR_AP_status">online</string>
    <string name="title_activity_wifi_connect">WifiConnectActivity</string>
    <string name="relay_top_title">Relay Configuration</string>
    <string name="relay_alias">Alias</string>
    <string name="relay_wifi_relay_module">WIFI Relay modules (8)</string>
    <string name="relay_wifi_relay_module2">WIFI Relay modules (4)</string>
    <string name="relay_wifi_relay_module_state">online</string>
    <string name="IP_subphone_setting_top_title">IP Subphone Setting</string>
    <string name="IP_subphone_setting_alias">Alias</string>
    <string name="IP_subphone_setting_master_phone_ip_address">
        Master Phone IP Address</string>
    <string name="IP_subphone_setting_ip_subphone_id">
        IP Subphone ID</string>
    <string name="IP_subphone_setting_change_ip_subphone_password">
        Change IP Subphone Password</string>
    <string name="IP_subphone_setting_change_engin_password">
        Change Engineering Mode Password</string>
    <string name="Acknowledge_all">Acknowledge All</string>
    <string name="Mute">Mute</string>
    <string name="Acknowledge">Acknowledge</string>
    <string name="Protecting">Protecting</string>
    <string name="exit_freely">You can exit freely within the next 30 seconds.</string>
    <string name="not_protect">If you decide not protect, your home will return to Home Mode.</string>
    <string name="Current_Home">Current: Home</string>
    <string name="choose_scene">Tap to choose a scene</string>
</resources>