<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_marginTop="30dp"
                android:background="@android:color/black">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_marginTop="@dimen/top_status_high"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView android:background="@drawable/welcome_background"
            android:layout_width="160.0dip"
            android:layout_height="160.0dip"
            android:layout_centerInParent="true" />
        <com.honeywell.homepanel.ui.uicomponent.CustomProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="200.0dip"
            android:layout_height="200.0dip"
            android:progress="10"
            style="?android:attr/progressBarStyleHorizontal" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="100dp"
            android:layout_height="70dp">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:background="@mipmap/protecting"
                android:layout_width="60dp"
                android:layout_height="50dp" />
            <com.honeywell.homepanel.ui.widget.HoneywellTextView
                android:text="@string/Protecting"
                style="@style/HoneywellCallTextStyle"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <com.honeywell.homepanel.ui.widget.HoneywellTextView
        android:id="@+id/tv_one"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/relative"
        android:layout_gravity="center_horizontal"
        style="@style/HoneywellwhiteTextStyle"
        android:text="@string/exit_freely"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.honeywell.homepanel.ui.widget.HoneywellTextView
        android:id="@+id/tv_two"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_one"
        android:layout_gravity="center_horizontal"
        style="@style/HoneywellwhiteTextStyle"
        android:text="@string/not_protect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.honeywell.homepanel.ui.widget.HoneywellButton
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/cancel"
        android:layout_marginBottom="50dp"
        style="@style/HoneywellButtonStyle"
        android:text="@string/indicator_board_cancel"
        android:background="#1792e5"
        android:layout_width="260dp"
        android:layout_height="60dp" />


</RelativeLayout>
