<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/arm_status_noevent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_weight="3"
        android:gravity="center">

        <com.honeywell.homepanel.ui.widget.HoneywellTextView
            android:id="@+id/goodwhat_noevent"
            style="@style/goodwhat"
            android:text="@string/goodmoring"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:textStyle="HONEYWELL_FONTS_MEDIUM" />

        <com.honeywell.homepanel.ui.widget.HoneywellTextView
            android:id="@+id/arm_hint_noevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/goodwhat_noevent"
            android:layout_below="@+id/goodwhat_noevent"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:lines="2"
            android:text="@string/disarmhint"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:textStyle="HONEYWELL_FONTS_MEDIUM" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/arm_status_hasevent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_weight="3"
        android:paddingTop="130dp"
        android:visibility="gone">


        <com.honeywell.homepanel.ui.widget.HoneywellTextView
            android:id="@+id/goodwhat_hasevent"
            style="@style/goodwhat"
            android:layout_alignLeft="@+id/arm_hint_hasevent"
            android:layout_gravity="center_horizontal"
            android:text="@string/goodafternoon"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:textStyle="HONEYWELL_FONTS_MEDIUM" />


        <com.honeywell.homepanel.ui.widget.HoneywellTextView
            android:id="@+id/arm_hint_hasevent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/goodwhat_hasevent"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:lineSpacingExtra="5dp"
            android:lines="2"
            android:text="@string/disarmhint"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:textStyle="HONEYWELL_FONTS_MEDIUM" />

        <ListView
            android:id="@+id/event_listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/goodwhat_hasevent"
            android:layout_below="@+id/arm_hint_hasevent"
            android:divider="#00000000"
            android:fastScrollEnabled="false" />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@mipmap/line" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/choose_scenarioImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@mipmap/choose_scenario_home" />
            <com.honeywell.homepanel.ui.widget.HoneywellTextView
                android:id="@+id/currentscenario"
                style="@style/HoneywellTextLightStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Current_Home" />
            <com.honeywell.homepanel.ui.widget.HoneywellTextView
                style="@style/HoneywellTextLightStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_scene" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:scaleType="centerInside"/>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>