<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:paddingTop="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_weight="1">

        <com.honeywell.homepanel.ui.widget.HoneywellTextView
            android:id="@+id/tv_welcomehome"
            style="@style/HoneywellPwdTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/welcomehome"
            android:textColor="@color/black" />

        <com.honeywell.homepanel.ui.widget.HoneywellTextView
            android:id="@+id/tv_enterhint"
            style="@style/HoneywellCallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_welcomehome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/password_hint_disarm"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/oneImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@mipmap/nopasswordenter" />

            <ImageView
                android:id="@+id/twoImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:scaleType="center"
                android:src="@mipmap/nopasswordenter" />

            <ImageView
                android:id="@+id/threeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:scaleType="center"
                android:src="@mipmap/nopasswordenter" />

            <ImageView
                android:id="@+id/fourImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:scaleType="center"
                android:src="@mipmap/nopasswordenter" />

            <ImageView
                android:id="@+id/fiveImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/nopasswordenter" />

            <ImageView
                android:id="@+id/sixImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:scaleType="center"
                android:src="@mipmap/nopasswordenter" />
        </LinearLayout>

        <com.honeywell.homepanel.ui.widget.HoneywellButton
            android:id="@+id/cancel"
            style="@style/HoneywellButtonStyle"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#1792e5"
            android:text="@string/indicator_board_cancel"
            android:visibility="gone" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white">

        <GridView
            android:id="@+id/gridView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:columnWidth="30dip"
            android:gravity="center"
            android:horizontalSpacing="10dip"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="30dip" />
    </RelativeLayout>
</LinearLayout>
